[package]
name = "args"
version = "0.1.1"
authors = ["Matthew Fornaciari <mattforni@gmail.com>"]
description = "An argument parsing and validation library designed to take some of tediousness out of the general 'getopts' crate."
keywords = ["args", "argument", "argv", "cli", "command"]
license = "MIT"
repository = "https://github.com/mattforni/args"
homepage = "https://github.com/mattforni/args"

[lib]
name = "args"
path = "src/lib.rs"

[dependencies]
getopts = "0.2"
log = "0.3"

