[package]
authors = ["Matthew Fornaciari <mattforni@gmail.com>"]
description = "An argument parsing and validation library designed to take some of tediousness out of the general 'getopts' crate."
documentation = "http://mattforni.github.io/rust/doc/args"
homepage = "https://github.com/mattforni/args"
keywords = ["args", "argument", "argv", "cli", "command"]
license = "MIT"
name = "args"
readme = "README.md"
repository = "https://github.com/mattforni/args"
version = "2.0.3"

[lib]
name = "args"
path = "src/lib.rs"

[dependencies]
getopts = "0"
log = "0"
